[gd_scene load_steps=2 format=3 uid="uid://yons3c8atxwe"]

[ext_resource type="Script" path="res://Scripts/UI/pause_menu.gd" id="1_t4c65"]

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t4c65")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.47451)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="main manu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/main manu" to="." method="_on_main_manu_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
